# Stocksense-financeAI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TECHNICAL_REPORT.md  build.gradle  create_tflite_model.py  final_verification.py  gradle.properties  settings.gradle  test_models_and_app.py
.github/workflows/: android-deploy.yml  android.yml
app/: build.gradle  proguard-rules.pro
app/schemas/com.stocksense.app.data.database.AppDatabase/: 3.json  4.json
app/src/androidTest/java/com/stocksense/app/: SmolLM2ModelTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Holdings_Statement_2026-03-28.xlsx  Stocks_Holdings_Statement_8990061013_2026-03-27.xlsx  history_AAPL.csv  stk.json  stock_prediction.tflite  stocks_initial.json
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/stocksense/app/: MainActivity.kt  StockSenseApp.kt
app/src/main/java/com/stocksense/app/alerts/: AlertManager.kt
app/src/main/java/com/stocksense/app/engine/: AgenticPipeline.kt  BitNetModelDownloader.kt  FeatureEngineering.kt  LLMInsightEngine.kt  LearningEngine.kt  LlamaCpp.kt  ModelManager.kt  PredictionEngine.kt
app/src/main/res/drawable/: ic_ai_agent.xml  ic_app_logo.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  stocksense_banner.xml  stocksense_logo.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
app/src/test/java/com/stocksense/app/: CredenceAITest.kt  FeatureTests.kt  PredictionLogicTest.kt  SmolLM2UnitTest.kt
reference idea/: credence AI AGENT instruction.md  credence AI README.md
scripts/: download_model.py  download_smollm2.sh
(+92 files in other folders)
